# scale-agentex-agent-demo

./: .gitignore  .gitmodules  Dockerfile.base  README.md  docker-compose.slim.yaml  docker-compose.yaml  list_models.py  run_agentex.ps1  run_agentex.sh
example_openai_agent/: Dockerfile  dev.ipynb  environments.yaml  manifest.yaml  pyproject.toml
example_openai_agent/project/: acp.py  openai_client.py  tools.py
example_openai_agent/project/prompts/: __init__.py  agent_prompt.py
patient_enrollment/: .env.development.reference  Dockerfile  Dockerfile.slim  README.md  environments.yaml  manifest.yaml  pyproject.toml
patient_enrollment/data/: clinical_programs.csv  persons.csv
patient_enrollment/project/: acp.py  tools.py
web_search/: Dockerfile  Dockerfile.slim  Makefile  README.md  dev.ipynb  environments.yaml  manifest.yaml  pyproject.toml  run_agent.sh
web_search/project/: acp.py
web_search/project/clients/: openai_client.py  sgp_client.py
