[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patient_enrollment"
version = "0.1.0"
description = "An AgentEx AI-Augmented Enrollment Agent for screening candidates."
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
    "python-dotenv>=1.2.1",
    "duckdb>=1.4.1",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
